--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: /Users/chinmay/Programming/micrograd/env
+name: micrograd
 channels:
   - defaults
 dependencies:
@@ -18,8 +18,8 @@ dependencies:
   - brotli-bin=1.0.9=h80987f9_8
   - brotli-python=1.0.9=py312h313beb8_8
   - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2024.3.11=hca03da5_0
-  - certifi=2024.6.2=py312hca03da5_0
+  - ca-certificates=2024.7.2=hca03da5_0
+  - certifi=2024.7.4=py312hca03da5_0
   - cffi=1.16.0=py312h80987f9_1
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.2.1=py312hca03da5_0
@@ -100,15 +100,15 @@ dependencies:
   - nbformat=5.9.2=py312hca03da5_0
   - ncurses=6.4=h313beb8_0
   - nest-asyncio=1.6.0=py312hca03da5_0
-  - notebook=7.0.8=py312hca03da5_1
+  - notebook=7.0.8=py312hca03da5_2
   - notebook-shim=0.2.3=py312hca03da5_0
   - numexpr=2.8.7=py312h0f3ea24_0
   - numpy=1.26.4=py312h7f4fdc5_0
   - numpy-base=1.26.4=py312he047099_0
-  - openjpeg=2.3.0=h7a6adac_2
+  - openjpeg=2.4.0=h0ed58ac_2
   - openssl=3.0.14=h80987f9_0
   - overrides=7.4.0=py312hca03da5_0
-  - packaging=23.2=py312hca03da5_0
+  - packaging=24.1=py312hca03da5_0
   - pandas=2.2.2=py312hd77ebd4_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -164,6 +164,7 @@ dependencies:
   - tinycss2=1.2.1=py312hca03da5_0
   - tk=8.6.14=h6ba3021_0
   - tornado=6.4.1=py312h80987f9_0
+  - tqdm=4.66.4=py312h989b03a_0
   - traitlets=5.14.3=py312hca03da5_0
   - typing-extensions=4.11.0=py312hca03da5_0
   - typing_extensions=4.11.0=py312hca03da5_0
@@ -180,4 +181,4 @@ dependencies:
   - zeromq=4.3.5=h313beb8_0
   - zlib=1.2.13=h18a0788_1
   - zstd=1.5.5=hd90d995_2
-prefix: /Users/chinmay/Programming/micrograd/env
+prefix: /opt/anaconda3/envs/micrograd
