--- a/repl/lake-manifest.json
+++ b/repl/lake-manifest.json
@@ -91,5 +91,5 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"}],
- "name": "autoformalization",
+ "name": "repl",
  "lakeDir": ".lake"}
