--- a/repl/lakefile.toml
+++ b/repl/lakefile.toml
@@ -1,7 +1,7 @@
-name = "autoformalization"
+name = "repl"
 version = "0.1.0"
 keywords = ["math"]
-defaultTargets = ["Autoformalization"]
+defaultTargets = ["Repl"]
 
 [leanOptions]
 pp.unicode.fun = true # pretty-prints `fun a ↦ b`
@@ -15,4 +15,4 @@ name = "mathlib"
 scope = "leanprover-community"
 
 [[lean_lib]]
-name = "Autoformalization"
+name = "Repl"
