--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,263 @@
-torch>=2.0.0
-transformers>=4.30.0
-rank-bm25>=0.2.2
-scikit-learn>=1.3.0
-langchain>=0.1.0
-langchain-community>=0.0.10
-faiss-cpu>=1.7.4
-sentence-transformers>=2.2.2
-numpy>=1.24.0
-dataclasses-json>=0.6.0
-huggingface-hub>=0.19.0 
+accelerate==1.9.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiohttp-cors==0.8.1
+aiosignal==1.3.2
+airportsdata==20250224
+annotated-types==0.7.0
+anyio==4.9.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astor==0.8.1
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beaker-py==2.4.7
+beautifulsoup4==4.13.3
+blake3==1.0.4
+bleach==6.2.0
+boto3==1.39.16
+botocore==1.39.16
+cached_path==1.7.3
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+colorful==0.5.7
+comm==0.2.2
+compressed-tensors==0.9.2
+contourpy==1.3.1
+cryptography==45.0.5
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==3.5.0
+debugpy==1.8.13
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+depyf==0.18.0
+dill==0.3.8
+diskcache==5.6.3
+distlib==0.4.0
+distro==1.9.0
+dnspython==2.7.0
+einops==0.8.1
+email_validator==2.2.0
+executing==2.2.0
+faiss-cpu==1.11.0.post1
+fastapi==0.115.12
+fastapi-cli==0.0.7
+fastjsonschema==2.21.1
+filelock==3.18.0
+fonttools==4.57.0
+fqdn==1.5.1
+frozenlist==1.5.0
+fsspec==2024.12.0
+ftfy==6.3.1
+gguf==0.10.0
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-core==2.4.3
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+graphviz==0.20.3
+grpcio==1.74.0
+h11==0.14.0
+hf-xet==1.0.3
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.30.2
+idna==3.10
+img2pdf==0.6.1
+importlib_metadata==8.6.1
+interegular==0.3.3
+ipykernel==6.29.5
+ipynb==0.5.1
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.5.1
+json5==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.8
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+lark==1.2.2
+lingua-language-detector==2.1.1
+llguidance==0.7.14
+lm-format-enforcer==0.10.11
+lxml==6.0.0
+markdown-it-py==3.0.0
+markdown2==2.5.4
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistral_common==1.5.4
+mistune==3.1.3
+mpmath==1.3.0
+msgpack==1.1.1
+msgspec==0.19.0
+multidict==6.4.3
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.4
+notebook==7.4.0
+notebook_shim==0.2.4
+numpy==1.26.4
+olmocr==0.2.1
+openai==1.75.0
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.35.0
+opentelemetry-exporter-prometheus==0.56b0
+opentelemetry-proto==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-semantic-conventions==0.56b0
+orjson==3.11.1
+outlines==0.1.11
+outlines_core==0.1.26
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partial-json-parser==0.2.1.1.post5
+pexpect==4.9.0
+pikepdf==9.10.2
+pillow==11.1.0
+platformdirs==4.3.7
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+py-spy==0.4.0
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.11.3
+pydantic-settings==2.10.1
+pydantic_core==2.33.1
+Pygments==2.19.1
+pyparsing==3.2.3
+pypdf==5.9.0
+pypdfium2==4.30.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.4.0
+rank-bm25==0.2.2
+ray==2.48.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rich-toolkit==0.14.1
+rpds-py==0.24.0
+rsa==4.9.1
+s3transfer==0.13.1
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.15.2
+Send2Trash==1.8.3
+sentence-transformers==5.0.0
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+smart_open==7.3.0.post1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.42
+stack-data==0.6.3
+starlette==0.46.2
+sympy==1.14.0
+tenacity==9.1.2
+terminado==0.18.1
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+torch==2.7.1
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.52.4
+typer==0.15.2
+types-python-dateutil==2.9.0.20241206
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.3.0
+uvicorn==0.34.1
+uvloop==0.21.0
+virtualenv==20.32.0
+vllm==0.8.3
+watchfiles==1.0.5
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+widgetsnbextension==4.0.13
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.19.0
+zipp==3.21.0
+zstandard==0.23.0
